--- a/public/stylesheets/create_post.css
+++ b/public/stylesheets/create_post.css
@@ -214,4 +214,17 @@ nav .right {
   width: 90%;
   
  }
+
+ #profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #42242a;
+  margin-right: 5px;
+}
 }
