--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -375,4 +375,17 @@ nav .left h1 {
   margin-left: 5px;
   cursor: pointer;
 }
+
+#profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  object-fit: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #42242a;
+  margin-right: 5px;
+}
 }
