--- a/views/following_page.ejs
+++ b/views/following_page.ejs
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+    <div class="hacks"></div>
+
     <nav>
         <div class="left">
             <a href="/">
@@ -28,61 +30,67 @@
         </div>
     </nav>
 
-    <div class="sidebar">
-        <div class="profile-info">
-            <img src="<%= user.icon %>" alt="">
-            <h2>
-                <%= user.fullname %>
-            </h2>
-            <div class="username">
-                <p>
-                    @<%= user.username %>
-                </p>
-            </div>
-            <p>
-                <%= user.bio %>
-            </p>
-            <div class="follow">
-                <a href="/myprofile/followers">
-                    <%= user.followers.length%> Followers
-                </a>
-                <a href="/myprofile/following">
-                    <%= user.following.length%> Following
-                </a>
-            </div>
-        </div>
-        <div class="sidebar-links">
-            <a href="/myprofile/edit">Edit Profile</a>
-            <a href="/logout">Logout</a>
-        </div>
-    </div>
+    <div class="actualmain">
 
-
-    <div class="main">
-        <div class="followersbox">
-            <h1>Following</h1>
-            <div class="followers-list">
-                <!-- Begin followers loop here -->
-                <% following.forEach(function(followed) { %>
-                <div class="followcard">
-                    <a href="/profile/<%=followed.username%>" class="accountinfo">
-                        <img src="<%=followed.icon%>" alt="">
-                        <h2>@<%=followed.username%>
-                        </h2>
-                    </a>
-                    <div class="buttons">
-                        <button class="followBtn <%= user.following.includes(followed._id) ? '' : 'followactive' %>"
-                            data-user-id="<%= followed._id %>" onclick="toggleFollow(this, '<%= followed._id %>')">
-                            <%= user.following.includes(followed._id) ? 'Following' : 'Follow' %>
-                        </button>
-                    </div>
+        <div class="sidebar">
+            <div class="profile-info">
+                <img src="<%= user.icon %>" alt="">
+                <h2>
+                    <%= user.fullname %>
+                </h2>
+                <div class="username">
+                    <p>
+                        @<%= user.username %>
+                    </p>
                 </div>
-                <% }); %>
-
-                <!-- End followers loop here -->
+                <p>
+                    <%= user.bio %>
+                </p>
+                <div class="follow">
+                    <a href="/myprofile/followers">
+                        <%= user.followers.length%> Followers
+                    </a>
+                    <a href="/myprofile/following">
+                        <%= user.following.length%> Following
+                    </a>
+                </div>
+            </div>
+            <div class="sidebar-links">
+                <a href="/myprofile/edit">Edit Profile</a>
+                <a href="/logout">Logout</a>
             </div>
         </div>
 
+
+        <div class="main">
+            <div class="followersbox">
+                <h1>Following</h1>
+                <div class="followers-list">
+                    <!-- Begin followers loop here -->
+                    <% following.forEach(function(followed) { %>
+                        <div class="followcard">
+                            <a href="/profile/<%=followed.username%>" class="accountinfo">
+                                <img src="<%=followed.icon%>" alt="">
+                                <h2>@<%=followed.username%>
+                                </h2>
+                            </a>
+                            <div class="buttons">
+                                <button
+                                    class="followBtn <%= user.following.includes(followed._id) ? '' : 'followactive' %>"
+                                    data-user-id="<%= followed._id %>"
+                                    onclick="toggleFollow(this, '<%= followed._id %>')">
+                                    <%= user.following.includes(followed._id) ? 'Following' : 'Follow' %>
+                                </button>
+                            </div>
+                        </div>
+                        <% }); %>
+
+                            <!-- End followers loop here -->
+                </div>
+            </div>
+
+
+        </div>
 
     </div>
 
