--- a/views/other_following.ejs
+++ b/views/other_following.ejs
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+     <div class="hacks"></div>
     <nav>
         <div class="left">
             <a href="/">
@@ -22,6 +23,12 @@
         </div>
         <div class="right">
             <a href="/newpost" id="create-post">NEW POST</a>
+            <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px"
+                    viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                    <path
+                        d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
+                </svg></a>
+
             <a id="profile-icon" href="/myprofile">
                 <img src="<%= user.icon %>" alt="">
             </a>
@@ -29,58 +36,65 @@
     </nav>
 
     <!-- trying out sidebar with position fixed -->
+    <div class="actualmain">
 
-    <div class="sidebar">
-        <div class="profile-info">
-            <img src="<%= otheruser.icon %>" alt="">
-            <h2>
-                <%= otheruser.fullname %>
-            </h2>
-            <div class="username">
+        <div class="sidebar">
+            <div class="profile-info">
+                <img src="<%= otheruser.icon %>" alt="">
+                <h2>
+                    <%= otheruser.fullname %>
+                </h2>
+                <div class="username">
+                    <p>
+                        @<%= otheruser.username %>
+                    </p>
+                </div>
                 <p>
-                    @<%= otheruser.username %>
+                    <%= otheruser.bio %>
                 </p>
-            </div>
-            <p>
-                <%= otheruser.bio %>
-            </p>
-            <div class="follow">
-               <a href="/profile/<%=otheruser.username%>/followers"> <%= otheruser.followers.length%> Followers</a>
-                <a href="/profile/<%=otheruser.username%>/following"> <%= otheruser.following.length%> Following</a>
-            </div>
-        </div>
-        <div class="sidebar-links">
-          <button id="followBtn" class="<%= user.following.includes(otheruser._id) ? 'following' : '' %>"
-                onclick="toggleFollow('<%= otheruser._id %>')">
-                <%= user.following.includes(otheruser._id) ? 'Following' : 'Follow' %>
-            </button>
-        </div>
-    </div>
-
-
-    <div class="main">
-         <div class="followersbox">
-            <h1>Following</h1>
-            <div class="followers-list">
-                <!-- Begin followers loop here -->
-                <% following.forEach(function(followed) { %>
-                <div class="followcard">
-                    <a href="/profile/<%=followed.username%>" class="accountinfo">
-                        <img src="<%=followed.icon%>" alt="">
-                        <h2>@<%=followed.username%>
-                        </h2>
+                <div class="follow">
+                    <a href="/profile/<%=otheruser.username%>/followers">
+                        <%= otheruser.followers.length%> Followers
                     </a>
-                    <!-- <div class="buttons">
+                    <a href="/profile/<%=otheruser.username%>/following">
+                        <%= otheruser.following.length%> Following
+                    </a>
+                </div>
+            </div>
+            <div class="sidebar-links">
+                <button id="followBtn" class="<%= user.following.includes(otheruser._id) ? 'following' : '' %>"
+                    onclick="toggleFollow('<%= otheruser._id %>')">
+                    <%= user.following.includes(otheruser._id) ? 'Following' : 'Follow' %>
+                </button>
+            </div>
+        </div>
+
+
+        <div class="main">
+            <div class="followersbox">
+                <h1>Following</h1>
+                <div class="followers-list">
+                    <!-- Begin followers loop here -->
+                    <% following.forEach(function(followed) { %>
+                        <div class="followcard">
+                            <a href="/profile/<%=followed.username%>" class="accountinfo">
+                                <img src="<%=followed.icon%>" alt="">
+                                <h2>@<%=followed.username%>
+                                </h2>
+                            </a>
+                            <!-- <div class="buttons">
                         <button class="followBtn <%= user.following.includes(followed._id) ? '' : 'followactive' %>"
                             data-user-id="<%= followed._id %>" onclick="toggleFollow(this, '<%= followed._id %>')">
                             <%= user.following.includes(followed._id) ? 'Following' : 'Follow' %>
                         </button>
                     </div> -->
+                        </div>
+                        <% }); %>
+                            <!-- End followers loop here -->
                 </div>
-                <% }); %>
-                <!-- End followers loop here -->
             </div>
         </div>
+
     </div>
 
 
@@ -114,7 +128,7 @@
         }
     </script>
 
-    
+
 </body>
 
 </html>
