--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-     <div class="hacks"></div>
-     
+    <div class="hacks"></div>
+
     <nav>
         <div class="left">
             <a href="/">
@@ -24,8 +24,12 @@
         </div>
         <div class="right">
             <a href="/newpost" id="create-post">NEW POST</a>
-            <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a"><path d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></a>
-   
+            <a href="/newpost" id="create-post-icon"><svg xmlns="http://www.w3.org/2000/svg" height="30px"
+                    viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                    <path
+                        d="M440-280h80v-160h160v-80H520v-160h-80v160H280v80h160v160Zm40 200q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z" />
+                </svg></a>
+
             <a id="profile-icon" href="">
                 <img src="<%= user.icon %>" alt="">
             </a>
@@ -82,58 +86,72 @@
 
                     <div class="posts">
 
+                        <% function timeAgo(date) { const seconds=Math.floor((Date.now() - new Date(date)) / 1000);
+                            const units=[ { label: 'year' , seconds: 365 * 24 * 60 * 60 }, { label: 'month' , seconds:
+                            30 * 24 * 60 * 60 }, { label: 'day' , seconds: 24 * 60 * 60 }, { label: 'hour' , seconds: 60
+                            * 60 }, { label: 'minute' , seconds: 60 }, { label: 'second' , seconds: 1 } ]; for (const
+                            unit of units) { const value=Math.floor(seconds / unit.seconds); if (value> 0) {
+                            return `${value} ${unit.label}${value !== 1 ? 's' : ''} ago`;
+                            }
+                            }
 
-                        <% userposts.forEach(function(post) { %>
+                            return 'just now';
+                            } %>
 
-                            <div class="card" style="background-color: <%= post.cardColor %>;">
-                                <div class="person-details">
-                                    <div class="person-icon">
-                                        <img src="<%=user.icon%>" alt="person" />
+
+                            <% userposts.forEach(function(post) { %>
+
+                                <div class="card" style="background-color: <%= post.cardColor %>;">
+                                    <div class="person-details">
+                                        <div class="person-icon">
+                                            <img src="<%=user.icon%>" alt="person" />
+                                        </div>
+                                        <div class="person-name">
+                                            @<%=user.username%>
+                                        </div>
                                     </div>
-                                    <div class="person-name">
-                                        @<%=user.username%>
+                                    <!-- <h2>Post Title</h2> -->
+                                    <p>
+                                    <p style="white-space: pre-line;">
+                                        <%= post.content %>
+                                    </p>
+                                    </p>
+                                    <div class="card-footer">
+                                        <div class="datecontainer"><%=timeAgo(post.date)%></div>
+                                        <div class="like-container">
+                                            <button
+                                                class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
+                                                onclick="toggleLike(this, '<%= post._id %>')">
+                                                <!-- Unliked (outlined heart) -->
+                                                <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg"
+                                                    height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                                                    <path
+                                                        d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
+                                                </svg>
+
+                                                <!-- Liked (filled heart) -->
+                                                <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg"
+                                                    height="30px" viewBox="0 -960 960 960" width="30px" fill="#42242a">
+                                                    <path
+                                                        d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
+                                                </svg>
+                                            </button>
+                                            <span class="like-count">
+                                                <%=post.likesCount%>
+                                            </span>
+
+                                            <a href="/deletepost/<%=post._id%>" class="delete-button">
+                                                <svg xmlns="http://www.w3.org/2000/svg" height="30px"
+                                                    viewBox="0 -960 960 960" width="30px" fill="#e3e3e3">
+                                                    <path
+                                                        d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z" />
+                                                </svg>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
-                                <!-- <h2>Post Title</h2> -->
-                                <p>
-                                <p style="white-space: pre-line;">
-                                    <%= post.content %>
-                                </p>
-                                </p>
-                                <div class="card-footer">
-                                    <div class="like-container">
-                                        <button class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
-                                            onclick="toggleLike(this, '<%= post._id %>')">
-                                            <!-- Unliked (outlined heart) -->
-                                            <svg class="heart-outline" xmlns="http://www.w3.org/2000/svg" height="30px"
-                                                viewBox="0 -960 960 960" width="30px" fill="#42242a">
-                                                <path
-                                                    d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Zm0-108q96-86 158-147.5t98-107q36-45.5 50-81t14-70.5q0-60-40-100t-100-40q-47 0-87 26.5T518-680h-76q-15-41-55-67.5T300-774q-60 0-100 40t-40 100q0 35 14 70.5t50 81q36 45.5 98 107T480-228Zm0-273Z" />
-                                            </svg>
 
-                                            <!-- Liked (filled heart) -->
-                                            <svg class="heart-filled" xmlns="http://www.w3.org/2000/svg" height="30px"
-                                                viewBox="0 -960 960 960" width="30px" fill="#42242a">
-                                                <path
-                                                    d="m480-120-58-52q-101-91-167-157T150-447.5Q111-500 95.5-544T80-634q0-94 63-157t157-63q52 0 99 22t81 62q34-40 81-62t99-22q94 0 157 63t63 157q0 46-15.5 90T810-447.5Q771-395 705-329T538-172l-58 52Z" />
-                                            </svg>
-                                        </button>
-                                        <span class="like-count">
-                                            <%=post.likesCount%>
-                                        </span>
-
-                                        <a href="/deletepost/<%=post._id%>" class="delete-button">
-                                            <svg xmlns="http://www.w3.org/2000/svg" height="30px"
-                                                viewBox="0 -960 960 960" width="30px" fill="#e3e3e3">
-                                                <path
-                                                    d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z" />
-                                            </svg>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <% }); %>
+                                <% }); %>
 
                     </div>
 
