--- a/views/other_profile.ejs
+++ b/views/other_profile.ejs
@@ -84,6 +84,18 @@
                 <% } %>
                     <div class="posts">
 
+                         <% function timeAgo(date) { const seconds=Math.floor((Date.now() - new Date(date)) / 1000);
+                            const units=[ { label: 'year' , seconds: 365 * 24 * 60 * 60 }, { label: 'month' , seconds:
+                            30 * 24 * 60 * 60 }, { label: 'day' , seconds: 24 * 60 * 60 }, { label: 'hour' , seconds: 60
+                            * 60 }, { label: 'minute' , seconds: 60 }, { label: 'second' , seconds: 1 } ]; for (const
+                            unit of units) { const value=Math.floor(seconds / unit.seconds); if (value> 0) {
+                            return `${value} ${unit.label}${value !== 1 ? 's' : ''} ago`;
+                            }
+                            }
+
+                            return 'just now';
+                            } %>
+
 
                         <% userposts.forEach(function(post) { %>
 
@@ -103,6 +115,7 @@
                                 </p>
                                 </p>
                                 <div class="card-footer">
+                                    <div class="datecontainer"><%=timeAgo(post.date)%></div>
                                     <div class="like-container">
                                         <button class="like-button <%= post.likes.includes(user._id) ? 'liked' : '' %>"
                                             onclick="toggleLike(this, '<%= post._id %>')">
