--- a/views/myprofile.ejs
+++ b/views/myprofile.ejs
@@ -111,11 +111,11 @@
                                         </div>
                                     </div>
                                     <!-- <h2>Post Title</h2> -->
+                                   
                                     <p>
-                                    <p style="white-space: pre-line;">
-                                        <%= post.content %>
+                                        <%- post.content.replace(/\n/g, '<br>') %>
                                     </p>
-                                    </p>
+    
                                     <div class="card-footer">
                                         <div class="datecontainer"><%=timeAgo(post.date)%></div>
                                         <div class="like-container">
