--- a/views/partials/post.ejs
+++ b/views/partials/post.ejs
@@ -27,7 +27,7 @@
         </div>
         <div class="person-name">@<%=postuser.username%></div>
     </a>
-    <p><%= post.content %></p>
+    <p><%- post.content.replace(/\n/g, '<br>') %></p>
     <div class="card-footer">
         <div class="datecontainer"><%= timeAgo(post.date) %></div>
         <div class="like-container">
