--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,10 @@
     <div class="main">
         <!-- The actual div names are from the sigup page that's why they are the same, but the functionality is different. -->
 
-        <div class="info"></div>
+        <div class="info">
+            <h1>EUROPA</h1>
+            <H2>EXPRESS YOUR THOUGHTS, YOUR OWN WAY</H2>
+        </div>
         <form action="/login-user" method="POST">
            
                 <div class="signup">
