--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -25,7 +25,10 @@
 
     <div class="main">
 
-        <div class="info"></div>
+        <div class="info">
+            <h1>EUROPA</h1>
+            <H2>EXPRESS YOUR THOUGHTS, YOUR OWN WAY</H2>
+        </div>
         <form action="/create-user" method="POST">
                 <div class="signup">
                     <h2>Make an Account</h2>
