--- a/views/create_post.ejs
+++ b/views/create_post.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create Post</title>
+    <link rel="icon" type="image/x-icon" href="/media/europa-icon.png">
     <link rel="stylesheet" href="/stylesheets/create_post.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
             </a>
         </div>
         <div class="right">
-            <a id="username" href="/profile">
+            <a id="username" href="/myprofile">
                 <%= user.username %>
             </a>
             <a id="profile-icon" href="/myprofile">
