--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Edit profile</title>
+    <link rel="icon" type="image/x-icon" href="/media/europa-icon.png">
     <link rel="stylesheet" href="/stylesheets/edit_profile.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -47,7 +48,8 @@
                     <input type="text" name="icon" id="icon" value="<%= user.icon %>">
                 </div>
             </div>
-
+            <label for="fullname">Full name : </label>
+            <input type="text" name="fullname" id="fullname" placeholder="Fullname" value="<%= user.fullname %>" required>
             <label for="username">Username : </label>
             <input type="text" name="username" id="username" placeholder="Username" value="<%= user.username %>" required>
             <label for="bio">Bio : </label>
